# claude-code-book-write-template-test

.steering/: book-progress.json
.steering/20260311-ch01-writing/: design.md  requirements.md  tasklist.md
.steering/20260311-ch02-writing/: tasklist.md
.steering/20260311-ch03-writing/: design.md  requirements.md  tasklist.md
.steering/20260311-ch04-writing/: tasklist.md
.steering/20260312-ch01-writing/: design.md  requirements.md  tasklist.md
.steering/20260312-ch02-writing/: design.md  requirements.md  tasklist.md
.steering/20260312-ch03-writing/: design.md  requirements.md  tasklist.md
.steering/20260312-ch04-writing/: design.md  requirements.md  tasklist.md
docs/: book-architecture.md  book-plan.md  figure-list.md  glossary.md  repository-structure.md  writing-guidelines.md
docs/chapter-specs/: ch01-spec.md  ch02-spec.md  ch03-spec.md  ch04-spec.md  ch05-spec.md
docs/feedbacks/: ch01-review.md  ch02-review.md  ch03-review.md  ch04-review.md  ch05-review.md
docs/ideas/: book-concept.md
docs/sample-app-spec/: architecture.md  development-guidelines.md  functional-design.md  product-requirements.md
docs/sample-app-spec/ideas/: app-concept.md
manuscript/ch01/: ch01.md
manuscript/ch02/: ch02.md
manuscript/ch03/: ch03.md
manuscript/ch04/: ch04.md
manuscript/ch05/: ch05.md
sample-app/wasm-image-filter/rust/: Cargo.toml
sample-app/wasm-image-filter/rust/src/: lib.rs
sample-app/wasm-image-filter/web/: app.js  index.html
